# Authl

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  test.sh  test_app.py
Authl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
authl/: __init__.py  __version__.py  disposition.py  flask.py  tokens.py  utils.py  webfinger.py
authl/flask_templates/: authl.css  login.html  notify.html  post-needed.html
authl/handlers/: __init__.py  bluesky.py  email.py  email_addr.py  fediverse.py  indieauth.py  indielogin.py  mastodon.py  oauth.py  test_handler.py  twitter.py
docs/: authl.rst  conf.py  flask.rst  flow.rst  handlers.rst  index.rst  requirements.txt
raw_assets/: email icon.ai
test/: rogue_indieauth.py
tests/: __init__.py  rogue_indieauth.py  test_base.py  test_disposition.py  test_flask_wrapper.py  test_main.py  test_tokens.py  test_utils.py  test_webfinger.py
tests/handlers/: __init__.py  test_emailaddr.py  test_fediverse.py  test_indieauth.py  test_test_handler.py  test_twitter.py
wireframes/: login-page.html
