[tool.poetry]
name = "Authl"
version = "0.7.3"
description = "Framework-agnostic authentication wrapper"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
homepage = "https://plaidweb.site/"
repository = "https://github.com/PlaidWeb/Authl"
documentation = "https://authl.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
beautifulsoup4 = "^4.13.3"
expiringdict = "^1.2.2"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
requests_oauthlib = "^2.0.0"
validate_email = "^1.3"
mf2py = "^2.0.1"
mastodon-py = "^2.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.1.2"
flask = "^3.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
pylint = "^3.3.4"
coverage = "^7.6.12"
pytest = "^8.3.4"
requests-mock = "^1.12.1"
sphinx = "^7.3.7"
pytest-mock = "^3.14.0"
types-requests = "^2.32.0.20241016"
sphinx-rtd-theme = "^2.0.0"
pip-tools = "^7.4.1"
poetry-plugin-export = "^1.9.0"
hypercorn = "^0.17.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
