[tool.poetry]
name = "Authl"
version = "0.7.4"
description = "Framework-agnostic authentication wrapper"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
homepage = "https://plaidweb.site/"
repository = "https://github.com/PlaidWeb/Authl"
documentation = "https://authl.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = "^4.14.2"
expiringdict = "^1.2.2"
itsdangerous = "^2.2.0"
requests = "^2.32.5"
requests_oauthlib = "^2.0.0"
validate_email = "^1.3"
mf2py = "^2.0.1"
mastodon-py = "^2.1.4"
dnspython = "^2.8.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
flask = "*"
isort = "*"
mypy = "*"
pylint = "*"
coverage = "*"
pytest = "*"
requests-mock = "*"
sphinx = "*"
pytest-mock = "*"
types-requests = "*"
sphinx-rtd-theme = "*"
pip-tools = "*"
poetry-plugin-export = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
