[tool.poetry]
name = "Authl"
version = "0.7.4"
description = "Framework-agnostic authentication wrapper"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
homepage = "https://plaidweb.site/"
repository = "https://github.com/PlaidWeb/Authl"
documentation = "https://authl.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
beautifulsoup4 = "^4.14.2"
expiringdict = "^1.2.2"
itsdangerous = "^2.2.0"
requests = "^2.32.5"
requests_oauthlib = "^2.0.0"
validate_email = "^1.3"
mf2py = "^2.0.1"
mastodon-py = "^2.1.4"
dnspython = "^2.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.3.0"
flask = "^3.1.2"
isort = "^7.0.0"
mypy = "^1.18.2"
pylint = "^4.0.2"
coverage = "^7.11.0"
pytest = "^8.4.2"
requests-mock = "^1.12.1"
sphinx = "^8.2.3"
pytest-mock = "^3.15.1"
types-requests = "^2.32.4.20250913"
sphinx-rtd-theme = "^3.0.2"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
